add fullscreen toggle

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.important-fullsize {
+  width: 100% !important;
+  height: 100% !important;
+}
